--- a/style2.css
+++ b/style2.css
@@ -30,37 +30,42 @@ body {
 .letter {
   padding: 0.5rem;
   color: var(--grey);
-  animation: light-me-up 0.2s 1 backwards;
+  animation: light-me-up 1.2s linear infinite;
 }
 
 .letter-1 {
-  animation-delay: 0.2s;
+  animation-delay: 0s;
 }
 .letter-2 {
-  animation-delay: 0.25s;
+  animation-delay: 0.2s;
 }
 .letter-3 {
-  animation-delay: 0.4s;
+  animation-delay: 0.3s;
 }
 .letter-4 {
-  animation-delay: 0.55s;
+  animation-delay: 0.4s;
 }
 .letter-5 {
-  animation-delay: 0.7s;
+  animation-delay: 0.5s;
 }
 .letter-6 {
-  animation-delay: 0.85s;
+  animation-delay: 0.6s;
 }
 .letter-7 {
-  animation-delay: 1s;
+  animation-delay: 0.7s;
 }
 .letter-8 {
-  animation-delay: 1.2s;
+  animation-delay: 0.8s;
 }
 
 @keyframes light-me-up {
   0% {
     color: var(--grey);
+    text-shadow: none;
+  }
+  90% {
+    color: var(--grey);
+    text-shadow: none;
   }
   100% {
     color: var(--yellow);
