--- a/style.css
+++ b/style.css
@@ -27,50 +27,65 @@ body {
   display: flex;
 }
 
+.container span {
+  font-weight: 400;
+  letter-spacing: 20px;
+}
+
 .letter {
   padding: 0.5rem;
   color: var(--grey);
-  animation: light-me-up 4s ease-in-out infinite;
+  animation: lightMeUp 1.4s linear infinite,
+    letterWave 1s ease-in-out infinite alternate;
+  /* animation-delay: calc(var(--order) * 50ms);/ */
 }
 
 .letter-1 {
-  animation-delay: 0.2s;
+  animation-delay: 0.1s;
 }
 .letter-2 {
-  animation-delay: 0.5s;
+  animation-delay: 0.2s;
 }
 .letter-3 {
-  animation-delay: 0.7s;
+  animation-delay: 0.3s;
 }
 .letter-4 {
-  animation-delay: 0.9s;
+  animation-delay: 0.4s;
 }
 .letter-5 {
-  animation-delay: 1.1s;
+  animation-delay: 0.5s;
 }
 .letter-6 {
-  animation-delay: 1.3s;
+  animation-delay: 0.6s;
 }
 .letter-7 {
-  animation-delay: 1.6s;
+  animation-delay: 0.7s;
 }
 .letter-8 {
-  animation-delay: 1.8s;
+  animation-delay: 0.8s;
 }
 
-@keyframes light-me-up {
+@keyframes lightMeUp {
   0% {
     color: var(--grey);
+    text-shadow: none;
   }
-  25% {
+  90% {
+    color: var(--grey);
+    text-shadow: none;
   }
-  50% {
+  100% {
     color: var(--yellow);
+    text-shadow: 1px 1px 15px var(--orange);
   }
-  75% {
-    color: var(--orange);
+}
+
+@keyframes letterWave {
+  50% {
+    font-weight: 700;
   }
-  0% {
-    color: var(--grey);
+  100% {
+    font-weight: 900;
+    letter-spacing: -10px;
   }
 }
