--- a/style2.css
+++ b/style2.css
@@ -30,45 +30,47 @@ body {
 .letter {
   padding: 0.5rem;
   color: var(--grey);
-  animation: light-me-up 1.2s linear infinite;
+  animation: light-me-up 4s ease-in-out infinite;
 }
 
 .letter-1 {
-  animation-delay: 0s;
-}
-.letter-2 {
   animation-delay: 0.2s;
 }
-.letter-3 {
-  animation-delay: 0.3s;
-}
-.letter-4 {
-  animation-delay: 0.4s;
-}
-.letter-5 {
+.letter-2 {
   animation-delay: 0.5s;
 }
-.letter-6 {
-  animation-delay: 0.6s;
-}
-.letter-7 {
+.letter-3 {
   animation-delay: 0.7s;
 }
+.letter-4 {
+  animation-delay: 0.9s;
+}
+.letter-5 {
+  animation-delay: 1.1s;
+}
+.letter-6 {
+  animation-delay: 1.3s;
+}
+.letter-7 {
+  animation-delay: 1.6s;
+}
 .letter-8 {
-  animation-delay: 0.8s;
+  animation-delay: 1.8s;
 }
 
 @keyframes light-me-up {
   0% {
     color: var(--grey);
-    text-shadow: none;
   }
-  90% {
-    color: var(--grey);
-    text-shadow: none;
+  25% {
   }
-  100% {
+  50% {
     color: var(--yellow);
-    text-shadow: 1px 1px 15px var(--orange);
+  }
+  75% {
+    color: var(--orange);
+  }
+  0% {
+    color: var(--grey);
   }
 }
