--- a/style.css
+++ b/style.css
@@ -67,6 +67,24 @@ body {
 .letter-9 {
   animation-delay: 1s;
 }
+.letter-10 {
+  animation-delay: 1.1s;
+}
+.letter-11 {
+  animation-delay: 1.2s;
+}
+.letter-12 {
+  animation-delay: 1.3s;
+}
+.letter-13 {
+  animation-delay: 1.4s;
+}
+.letter-14 {
+  animation-delay: 1.5s;
+}
+.letter-15 {
+  animation-delay: 1.6s;
+}
 
 @keyframes lightMeUp {
   0% {
